fixed the header misalignment on Firefox 27.0 bug by changing slogan style in style.css

--- a/wp-content/themes/handmade_theme/style.css
+++ b/wp-content/themes/handmade_theme/style.css
@@ -1880,7 +1880,7 @@ display: none;
 
 slogan {color: white;
 position: absolute;
-width: 50%;
+width: 45%;
 float: left;
 clear: both;
 font-size: 15px;
